tic-tac-toe/style.css
@font-face {
  font-weight: 400;
  font-family: "Pacifico";
  src: url("./assets/fonts/Pacifico-Regular.ttf");
}

@font-face {
  font-weight: 400;
  font-family: "Caveat";
  src: url("./assets/fonts/Caveat-Regular.ttf");
}

/* Обнуление */

* {
  margin: 0;
  padding: 0;
  border: 0;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

:focus,
:active {
  outline: none;
}

a:focus,
a:active {
  outline: none;
}

nav,
footer,
header,
aside {
  display: block;
}

html,
body {
  width: 100%;
  height: 100%;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.2;
  text-size-adjust: 100%;
  scroll-behavior: smooth;
  font-family: "Pacifico", cursive;
}

input,
button,
textarea {
  font-family: inherit;
}

input::-ms-clear {
  display: none;
}

button {
  cursor: pointer;
}

button::-moz-focus-inner {
  padding: 0;
  border: 0;
}

a,
a:visited {
  text-decoration: none;
}

a:hover {
  text-decoration: none;
}

ul li {
  list-style: none;
}

img {
  vertical-align: top;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 400;
  font-size: inherit;
}

/* COMMON */

.body {
  display: flex;
  flex-direction: column;
}

h2 {
  color: #0acf83;
}

/* HEADER */

.header {
  z-index: 2;
  display: flex;
  justify-content: center;
  width: 100%;
}

.header-wrap {
  display: flex;
  align-items: baseline;
  width: 100%;
  max-width: 1200px;
  padding: 20px 135px;
}

h1,
.title-header {
  display: block;
  flex-grow: 1;
  font-size: 40px;
}

.title-header {
  display: none;
}

.menu {
  display: flex;
  flex-direction: row;
  align-items: center;
  column-gap: 15px;
}

.menu-item {
  display: block;
  padding: 10px;
  font-size: 32px;
  font-family: "Caveat", cursive;
  cursor: pointer;
  transition: 0.2s;
}

.menu-item:hover {
  color: #0acf83;
  border-top: 1px solid #0acf83;
  border-bottom: 1px solid #0acf83;
}

.menu-toggle {
  display: none;
}

@media (max-width: 1152px) {
  h1 {
    font-size: 32px;
  }

  .menu {
    column-gap: 10px;
  }

  .menu-item {
    padding: 8px;
    font-size: 28px;
  }
}

@media (max-width: 1016px) {
  h1 {
    font-size: 28px;
  }

  .menu {
    column-gap: 5px;
  }

  .menu-item {
    padding: 6px;
    font-size: 24px;
  }
}

@media (max-width: 930px) {
  h1 {
    font-size: 22px;
  }
}

@media (max-width: 812px) {
  .menu {
    position: fixed;
    top: 0;
    right: -100%;
    display: flex;
    flex-direction: column;
    width: 80%;
    height: 100%;
    margin: 0;
    padding: 145px 0 0;
    overflow-y: auto;
    list-style: none;
    background-color: #ffffff;
    box-shadow: 0 0 0 9999px rgb(255 255 255 / 50%);
    visibility: hidden;
    transition-duration: 0.3s;
  }

  .menu-item {
    display: block;
    margin: 0 0 39px;
    padding: 0;
    font-size: 35px;
    text-align: left;
    transition-duration: 0.3s;
  }

  .menu-btn {
    position: fixed;
    top: 13px;
    right: 135px;
    z-index: 3;
    display: flex;
    align-items: center;
    width: 50px;
    height: 50px;
  }

  .menu-btn > span,
  .menu-btn > span::before,
  .menu-btn > span::after {
    position: absolute;
    display: block;
    width: 100%;
    height: 3px;
    background-color: #000000;
    transition-duration: 0.3s;
  }

  .menu-btn > span::before {
    content: "";
    top: -12.5px;
  }

  .menu-btn > span::after {
    content: "";
    top: 12.5px;
  }

  .menu-toggle:checked ~ .menu-btn > span {
    transform: rotate(45deg);
  }

  .menu-toggle:checked ~ .menu-btn > span::before {
    top: 0;
    transform: rotate(0);
  }

  .menu-toggle:checked ~ .menu-btn > span::after {
    top: 0;
    transform: rotate(90deg);
  }

  .menu-toggle:checked ~ .menu {
    right: 0;
    visibility: visible;
  }
}

@media (max-width: 600px) {
  .menu-btn {
    top: 3px;
    right: 50px;
  }
}

@media (max-width: 430px) {
  h1 {
    display: none;
  }

  .title-header {
    display: block;
    font-size: 28px;
  }
}

.rules,
.enemy,
.records {
  position: absolute;
  top: -100%;
  z-index: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 650px;
  max-height: 100%;
  padding: 15px 25px;
  overflow-y: auto;
  font-family: "Caveat", cursive;
  background-color: #e5e5e5;
  border-radius: 20px;
  opacity: 0;
  transition: 1s;
}

.rules.show,
.enemy.show,
.records.show {
  top: 80px;
  align-self: center;
  max-height: 80vh;
  border: 2px solid rgb(0 0 0 / 0%);
  box-shadow: 0 0 0 9999px rgb(255 255 255 / 50%);
  opacity: 1;
}

.rules-text,
.rules-title,
.enemy-title,
.records-title {
  display: block;
  padding-bottom: 15px;
}

.rules-text {
  font-size: 25px;
}

.rules-title,
.enemy-title,
.records-title {
  font-size: 32px;
}

.enemy-images {
  display: flex;
}

.robot,
.human {
  width: 200px;
  height: 200px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: auto 170px;
  cursor: pointer;
  transition: 0.6s;
}

.robot {
  background-image: url("./assets/svg/robot.svg");
}

.human {
  background-image: url("./assets/svg/human.svg");
}

.robot:hover,
.human:hover {
  background-size: auto 200px;
}

.records-table {
  display: block;
  margin-bottom: 10px;
  overflow-y: auto;
  border-spacing: 0;
  font-size: 25px;
  border: 2px solid #ffffff;
}

.records-table::-webkit-scrollbar {
  width: 8px;
}

.records-table::-webkit-scrollbar-thumb {
  background-color: rgb(0 0 0 / 20%);
}

.records-table th,
.records-table td {
  padding: 5px 8px;
  border: 1px solid #ffffff;
}

.rules-button,
.records-button {
  display: block;
  padding: 5px 10px;
  font-size: 18px;
  background-color: #ffffff;
  border-radius: 8px;
}

@media (max-width: 1152px) {
  .rules-text {
    font-size: 21px;
  }

  .rules-title,
  .enemy-title,
  .records-title {
    font-size: 28px;
  }

  .rules-text,
  .rules-title,
  .enemy-title,
  .records-title {
    padding-bottom: 10px;
  }

  .records-table th,
  .records-table td {
    padding: 3px 4px;
  }

  .records-table {
    margin-bottom: 7px;
    font-size: 20px;
  }
}

@media (max-width: 1016px) {
  .rules-text {
    font-size: 20px;
  }

  .rules-title,
  .enemy-title,
  .records-title {
    font-size: 25px;
  }

  .rules-text,
  .rules-title,
  .enemy-title,
  .records-title {
    padding-bottom: 9px;
  }

  .records-table th,
  .records-table td {
    padding: 2px 3px;
  }

  .records-table {
    margin-bottom: 6px;
    font-size: 19px;
  }
}

@media (max-width: 600px) {
  .rules.show,
  .enemy.show,
  .records.show {
    top: 60px;
  }
}

/* MAIN */

.main {
  display: flex;
  flex-grow: 1;
  justify-content: center;
  align-items: center;
}

.main-wrap {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1200px;
  padding: 0 135px;
  background-color: #ffffff;
}

@media (max-width: 600px) {
  .header-wrap,
  .main-wrap {
    padding: 10px 50px;
  }
}

.game-area {
  display: flex;
  flex-wrap: wrap;
  width: 300px;
}

.cell {
  width: 100px;
  height: 100px;
  padding: 28px;
  font-size: 50px;
  line-height: 0.9;
  font-family: "Pacifico", cursive;
  border: 1px solid #7b61ff;
  cursor: pointer;
  transition: 0.2s;
}

.cell.winner {
  background-color: #a5ffa2;
}

.cell:hover {
  background-color: #c8ffea;
}

.sign-x {
  color: #f24e1e;
}

.sign-o {
  color: #27aaff;
}

.sign-standoff {
  color: #0acf83;
}

.sign-x,
.sign-o,
.sign-standoff {
  text-transform: uppercase;
}

.winner-container {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: rgb(255 255 255 / 94%);
  transition: 1s;
}

.winner-container.hide {
  top: -100%;
  opacity: 0;
}

.winner {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.winner-txt {
  padding-bottom: 40px;
}

.win-p {
  font-size: 40px;
  line-height: 2;
  text-align: center;
  color: #0acf83;
}

.winner-txt .sign-x,
.winner-txt .sign-o {
  font-size: 32px;
}

.btn-winner {
  display: block;
  padding: 5px 10px;
  font-size: 18px;
  border-radius: 8px;
  box-shadow: 2px 2px 1px 1px rgb(0 0 0 / 20%);
  transition: 0.9s;
}

.btn-winner:hover {
  background-color: #ffffff;
}

/* FOOTER */

.footer {
  display: flex;
  justify-content: center;
  background-color: #2c2c2c;
}

.footer-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 1200px;
  padding: 20px 135px;
}

.github,
.rss {
  display: block;
  width: 100px;
  height: 40px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100% auto;
  opacity: 0.6;
  transition: 0.4s;
}

.github {
  background-image: url("./assets/svg/GitHub_Logo.svg");
}

.github:hover,
.rss:hover {
  opacity: 1;
}

.year {
  display: block;
  font-weight: 600;
  font-size: 46px;
  font-family: "Caveat", cursive;
  color: #ffffff;
}

.rss {
  background-image: url("./assets/svg/rs_school_js.svg");
}

@media (max-width: 1152px) {
  .footer-container {
    padding: 18px 135px;
  }

  .github,
  .rss {
    width: 80px;
  }

  .year {
    font-size: 40px;
  }
}

@media (max-width: 1016px) {
  .footer-container {
    padding: 15px 135px;
  }

  .github,
  .rss {
    width: 70px;
  }

  .year {
    font-size: 36px;
  }
}

@media (max-width: 600px) {
  .footer-container {
    padding: 10px 50px;
  }
}

